Elaboração da página Arcanos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <footer>
             <img src="logo.png" alt="Logo da página sobre tarot" class="logoRodape">
-            <p class="copyright">&copy; Copyright Akis - 2022</p>
+            <p class="copyright">&copy; Copyright Akislis - 2022</p>
         </footer>
     </body>
 </html>
